--- a/estilo.css
+++ b/estilo.css
@@ -9,7 +9,7 @@ body{
 
 
 .header{
-    background-image: url(../imagens/img-2.jpg);
+    background-image: url(../imagens/img-2);
     height: 350px;
     background-size: cover;
     background-position: right center;
@@ -29,7 +29,8 @@ body{
     text-transform: uppercase;
     margin-left: 16px;
     letter-spacing: 2px;
-    color: rgb(159, 61, 61);
+    color: white;
+    text-shadow: 3px 3px 5px rgb(159, 61, 61); 
 }
 
 .header__nav ul{
@@ -41,7 +42,9 @@ body{
 }
 
 .header__nav li{
-    background-color: rgba(137, 43, 226, 0.403);
+    background-color:  rgb(159, 61, 61); 
+    border-radius: 3px;
+    padding: 3px;
 }
 
 .header__nav a{
@@ -58,7 +61,8 @@ body{
     text-align: center;
     padding: 14px;
     border-radius: 6%;
-    color: rgb(159, 61, 61);
+    color: white;
+    text-shadow: 3px 3px 5px rgb(159, 61, 61); 
      
     
 }
@@ -102,10 +106,14 @@ main{
 .sobremim{    
     padding-left: 20px;
     padding-right: 80px;
-    text-justify: distribute;   
-    
-   
+    text-justify: distribute;           
 }
+
+.sobremim h2{    
+    text-shadow: 2px 2px 1px rgb(159, 61, 61);     
+}
+
+
 
 .description{
     text-justify: center;   
@@ -142,28 +150,44 @@ main{
     height: 120px;    
 }
 
+
 .botao{    
-    padding-top: 30px;    
+    padding: 10px;
+    background-color: rgb(159, 61, 61);  
+    width: 120px;  
+    margin-top: 15px; 
+    text-align: center;
+    border-radius: 5px;  
+    text-transform: uppercase; /*mantem todo texto em maíusculo*/ 
+    font-size: 16px; /*muda o tamanho da fonte*/
+    font-weight: bold; /*muda a fonte para negrito*/  
 }
 
-.botao a{
-    background-color: rgb(159, 61, 61); 
-    padding: 10px;
-    border-radius: 10%;
+.botao:hover{    
+    outline: 2px solid rgb(159, 61, 61); /*a caixa de texto muda para uma borda solid verde de 2px*/
+    background-color:transparent; /*a caixa de texto fica transparente ou sem o preenchimento*/    
+}
+
+.botao a{      
     color: white;
-    
+    text-decoration: none;      
+}
+
+.botao a:hover{      
+    color: #ccc;  
+    text-decoration: underline;  
 }
 
 .title-service{    
     text-align: left;
-    padding: 10px;
-      
+    padding: 10px;      
 }
 
 .title-service h2{    
     text-transform: uppercase;
     font-size: 26px; 
-    margin-top: 0px;   
+    margin-top: 0px; 
+    text-shadow: 2px 2px 1px rgb(159, 61, 61);   
 }
 
 .title-service h3{
@@ -209,6 +233,7 @@ main{
     font-size: 26px;     
     margin-bottom: 10px; 
     padding-left: 50px;
+    text-shadow: 2px 2px 1px rgb(159, 61, 61);  
 }
 
 
@@ -233,4 +258,272 @@ footer{
     padding: 20px;
     text-align: center;
     height: 50px;
+}
+
+/*estilo para celular*/
+
+@media screen and (max-width:768px){
+    body{
+        background-color: #0c1014; /* muda toda a cor de fundo do body*/
+        color: white; /*muda a cor do texto de tudo que está no body*/
+        width: 500%; /*dimensional a largura do body*/
+        max-width: 950px; /*dimensional a largura máxima do body*/
+        margin: 0 auto; /* a margim fica com valor zero*/
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; /* tipo de fonte*/
+    }
+    
+    
+    .header{
+        background-image: url(../imagens/img-2);
+        height: 350px;
+        background-size: cover;
+        background-position: right center;
+        padding: 15px; 
+    }   
+    
+    .cabecalho {    
+        display: flex;
+        padding: 16px;
+        justify-content: space-between;
+        align-items: center;
+    }    
+    
+    
+    .logo{
+        font-size: 26px;
+        text-transform: uppercase;
+        margin-left: 16px;
+        letter-spacing: 2px;
+        color: white;
+        text-shadow: 3px 3px 5px rgb(159, 61, 61); 
+    }
+    
+    .header__nav ul{
+        
+        display: flex;
+        list-style-type: none;
+        font-size: 18px;
+        gap: 16px;    
+    }
+    
+    .header__nav li{
+        background-color:  rgb(159, 61, 61); 
+        border-radius: 3px;
+        padding: 3px;
+    }
+    
+    .header__nav a{
+        color:white;
+        text-decoration: none;
+        padding: 10px;
+    }
+    
+    .header__nav a:hover{
+        text-decoration: underline;
+    }
+    
+    .title{
+        text-align: center;
+        padding: 14px;
+        border-radius: 6%;
+        color: white;
+        text-shadow: 3px 3px 5px rgb(159, 61, 61); 
+         
+        
+    }
+    
+    .title img{
+        height: 110px;
+        border-radius: 50%;
+        text-align: center;
+        padding: 5px;   
+        
+    }
+    
+    .title h2{    
+        padding-top: 10px;      
+        margin-bottom: 0px;
+        font-size: 26px;
+    }
+    
+    .title p{    
+        padding-top: 0px;  
+        margin-top: 0px;
+        font-size: 18px;
+    }
+    
+    main{
+        background-color: rgba(24, 19, 42, 0.524);
+        display: flex;    
+        padding-top: 50px;  
+        color: #b5b5b5;  
+        justify-content: center; 
+        height: 420px;    
+    }    
+    
+    
+    .foto{    
+        width: 1200px;
+        padding: 25px 5px 0 50px;    
+        
+    }
+    
+    .sobremim{    
+        padding-left: 20px;
+        padding-right: 80px;
+        text-justify: distribute;           
+    }
+    
+    .sobremim h2{    
+        text-shadow: 2px 2px 1px rgb(159, 61, 61);     
+    }
+    
+    
+    
+    .description{
+        text-justify: center;   
+        text-size-adjust: auto;
+        padding: 5px;
+        
+    }
+    
+    
+    .dados{
+        border: 3px solid rgb(159, 61, 61); 
+        display: flex;    
+        gap: 30px;      
+        width: 520px;    
+        justify-content: space-between; 
+        line-height: 0.6; 
+    }   
+    
+    .dados_conteudo{    
+        width: 300px;
+        padding: 2px;
+    }
+    
+    .dados_conteudo2{    
+        width: 150px;
+        padding: 2px;
+    }
+    
+    .dados__p{
+        margin-left: 0px;
+        padding-left:10px;
+        width: 100px;       
+        line-height: 0.6;
+        height: 120px;    
+    }
+    
+    .botao{    
+        padding: 10px;
+        background-color: rgb(159, 61, 61);  
+        width: 120px;  
+        margin-top: 15px; 
+        text-align: center;
+        border-radius: 5px;  
+        text-transform: uppercase; /*mantem todo texto em maíusculo*/ 
+        font-size: 16px; /*muda o tamanho da fonte*/
+        font-weight: bold; /*muda a fonte para negrito*/  
+    }
+    
+    .botao:hover{    
+        outline: 2px solid rgb(159, 61, 61); /*a caixa de texto muda para uma borda solid verde de 2px*/
+        background-color:transparent; /*a caixa de texto fica transparente ou sem o preenchimento*/    
+    }
+    
+    .botao a{      
+        color: white;
+        text-decoration: none;      
+    }
+    
+    .botao a:hover{      
+        color: #ccc;  
+        text-decoration: underline;  
+    }
+    
+    .title-service{    
+        text-align: left;
+        padding: 10px;
+          
+    }
+    
+    .title-service h2{    
+        text-transform: uppercase;
+        font-size: 26px; 
+        margin-top: 0px; 
+        text-shadow: 2px 2px 1px rgb(159, 61, 61);   
+    }
+    
+    .title-service h3{
+        color: rgb(159, 61, 61);
+        text-transform: uppercase;
+        font-size: 18px;     
+        margin-bottom: 5px;    
+    }
+    
+    .card{
+        display: flex;
+        gap: 15px;
+    }
+    
+    .card1{
+        padding: 15px;  
+        border: 3px solid rgb(159, 61, 61);  
+        border-radius: 20px;    
+    }
+    
+    
+    .card h3{    
+        text-align: center;    
+    }
+    
+    .conteudo{
+        background-color: rgba(30, 30, 70, 0.5);
+        padding: 1px 60px;
+        color: #b5b5b5 ;   
+        height: 470px;
+        
+    }
+    
+    .title_conhecimento{
+        background-color: rgba(24, 19, 42, 0.524); 
+        padding: 10px; 
+    }
+    
+    .title_conhecimento h3{
+        text-align: left;
+        color: #b5b5b5;  
+        text-transform: uppercase;
+        font-size: 26px;     
+        margin-bottom: 10px; 
+        padding-left: 50px;
+        text-shadow: 2px 2px 1px rgb(159, 61, 61);  
+    }
+    
+    
+    .conhecimentos{
+        background-color: rgba(24, 19, 42, 0.524);
+        display: flex;
+        gap: 1px;
+        justify-content: space-around;    
+        padding: 15px;
+        height: 120px;
+    }
+    
+    
+    .conhecimentos img{
+        border-radius: 50%;
+        height: 90px;
+    }
+    
+    
+    footer{
+        background-color: #b5b5b5;
+        padding: 20px;
+        text-align: center;
+        height: 50px;
+    }
+    
+    
 }
