--- a/estilo.css
+++ b/estilo.css
@@ -9,7 +9,7 @@ body{
 
 
 .header{
-    background-image: url(../imagens/img-2);
+    background-image: url(imagens/img-2.jpg);
     height: 350px;
     background-size: cover;
     background-position: right center;
@@ -274,7 +274,7 @@ footer{
     
     
     .header{
-        background-image: url(../imagens/img-2);
+        background-image: url(imagens/img-2.jpg);
         height: 350px;
         background-size: cover;
         background-position: right center;
